--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -7,10 +7,15 @@ environment:
   sdk: ^3.5.2
 
 dependencies:
+  dart_mappable: ^4.2.2
   flutter:
     sdk: flutter
+  shared_preferences: ^2.3.2
+  window_manager: ^0.4.2
 
 dev_dependencies:
+  build_runner: ^2.4.12
+  dart_mappable_builder: ^4.2.3
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
