--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -10,7 +10,11 @@ dependencies:
   dart_mappable: ^4.2.2
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: any
   shared_preferences: ^2.3.2
+  system_theme: ^3.1.0
   window_manager: ^0.4.2
 
 dev_dependencies:
@@ -22,4 +26,5 @@ dev_dependencies:
   very_good_analysis: ^6.0.0
 
 flutter:
+  generate: true
   uses-material-design: true
