--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  hugeicons: ^0.0.7
   intl: any
   shared_preferences: ^2.3.2
   system_theme: ^3.1.0
