--- a/src/ios/Runner/Info.plist
+++ b/src/ios/Runner/Info.plist
@@ -54,5 +54,10 @@
   <true/>
   <key>LSSupportsOpeningDocumentsInPlace</key>
   <true/>  
+  <key>CFBundleLocalizations</key>
+  <array>
+    <string>en</string>
+    <string>pt</string>
+  </array>
 </dict>
 </plist>
