--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   intl: any
   path: ^1.9.0
   shared_preferences: ^2.3.2
+  slang: ^3.31.2
+  slang_flutter: ^3.31.0
   system_theme: ^3.1.0
   window_manager: ^0.4.2
 
@@ -26,8 +28,8 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  slang_build_runner: ^3.31.0
   very_good_analysis: ^6.0.0
 
 flutter:
-  generate: true
   uses-material-design: true
