--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   slang_flutter: ^3.31.0
   system_theme: ^3.1.0
   window_manager: ^0.4.2
+  yaml_magic: ^1.0.6
 
 dev_dependencies:
   build_runner: ^2.4.12
