--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -8,19 +8,25 @@ environment:
 
 dependencies:
   dart_mappable: ^4.2.2
+  fast_immutable_collections: ^10.2.4
   file_picker: ^8.1.2
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  get_it: ^7.7.0
   hugeicons: ^0.0.7
   intl: any
   path: ^1.9.0
   shared_preferences: ^2.3.2
   slang: ^3.31.2
   slang_flutter: ^3.31.0
+  super_context_menu: ^0.8.22
   system_theme: ^3.1.0
+  url_launcher: ^6.3.0
+  watch_it: ^1.4.2
   window_manager: ^0.4.2
+  yaml: ^3.1.2
   yaml_magic: ^1.0.6
 
 dev_dependencies:
